# courier-rto-fraud-audit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
k8s/: configmap.yaml  cronjob-ingest.yaml  cronjob-produce.yaml  dashboard.yaml  localstack.yaml  postgres.yaml  secret.example.yaml
scripts/: generate_data.py  ingest_events.py  produce_events.py
src/rto_audit/: clustering.py  config.py  datagen.py  features.py  geo.py  ingest.py  pipeline.py  profiling.py  s3_source.py  store.py
tests/: test_clustering.py  test_config.py  test_features.py  test_geo.py  test_ingest.py  test_pipeline.py  test_profiling.py  test_s3_source.py  test_store.py
