[project]
name = "rto-audit"
version = "0.1.0"
description = "Courier Telemetry Audit & RTO Fraud Analytics Engine"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0,<2",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "streamlit>=1.35,<2",
    "plotly>=5.20,<7",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
